--- a/webpage.html
+++ b/webpage.html
@@ -15,6 +15,12 @@
     <center>
         <h1>This is a My First webpage</h1>
         <p>Welcome to my First webpage</p>
+        <p>&#128512;</p>
+            <i class="fas fa-cloud"></i>
+            <i class="fas fa-heart"></i>
+            <i class="fas fa-car"></i>
+            <i class="fas fa-file"></i>
+            <i class="fas fa-bars"></i>
     </center>
     <div class="">
         <img src="img/i1.jpg" alt="image1" height="400px" width="400px">
@@ -22,6 +28,6 @@
         <img src="img/i3.jpeg" alt="image3" height="400px" width="400px">
         <img src="img/i4.jpeg" alt="image4" height="400px" width="400px">
     </div>
-
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
 </html>
